<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:padding="20dp"
    android:gravity="center_vertical"
    android:background="?selectableItemBackground"
    android:paddingStart="24dp"
    >
    <ImageButton
        android:contentDescription="@string/play_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:clickable="false"
        android:background="@drawable/ic_circle"
        android:src="@drawable/ic_play"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        >
        <TextView
            android:id="@+id/tvFilename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/record_play_mp3"
            />
        <TextView
            android:id="@+id/tvMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/wow_fm"
            />

    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:visibility="gone"
        android:clickable="false"
        />
</LinearLayout>