<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/_00_00_00"
            android:textSize="56sp"
            app:layout_constraintBottom_toTopOf="@+id/waveFormView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.example.audiorecorder.WaveformView
            android:id="@+id/waveFormView"
            android:layout_width="match_parent"
            android:layout_height="400px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:background="@drawable/ic_ripple"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_delete_disable" />
            <ImageButton
                android:id="@+id/btnRecord"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/ic_record"
                android:contentDescription="@string/record"
                />
            <ImageButton
                android:id="@+id/btnList"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:background="@drawable/ic_ripple"
                android:contentDescription="@string/list_button"
                android:src="@drawable/ic_list"
                />
            <ImageButton
                android:id="@+id/btnDone"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:background="@drawable/ic_ripple"
                android:contentDescription="@string/done"
                android:src="@drawable/ic_done"
                android:visibility="gone"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/bottomSheetBg"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/opaqueBG"
        />
    <include
        layout="@layout/bottom_sheet"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>