<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_round"
    app:layout_behavior="@string/bottom_sheet_behavior"
    >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/save_record"
               android:layout_marginTop="20dp"
               android:textSize="26sp"
               android:textAlignment="center"
               />


          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/TextLayoutStyle"
              >
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/filenameInput"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="16dp"
                   android:padding="16dp"
                   />
          </com.google.android.material.textfield.TextInputLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center"
              android:layout_marginBottom="80dp"
              >
              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btnCancel"
                  android:layout_width="140dp"
                  android:layout_height="60dp"
                  android:text="@string/cancel_text"
                  app:backgroundTint="@color/gray"
                  android:textColor="@color/grayDarkDisabled"
                  app:rippleColor="@color/grayDarkDisabled"
                  app:cornerRadius="26dp"
                  />
              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btnOk"
                  android:layout_width="140dp"
                  android:layout_height="60dp"
                  android:text="@string/ok"
                  android:layout_marginStart="20dp"
                  app:backgroundTint="@color/strokeColor"
                  android:textColor="@color/white"
                  app:rippleColor="@color/grayDarkDisabled"
                  app:cornerRadius="26dp"
                  />
          </LinearLayout>
</LinearLayout>